# ChangeLog for sys-kernel/mm-sources
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.169 2004/07/04 19:17:48 plasmaroo Exp $

  04 Jul 2004; <plasmaroo@gentoo.org> mm-sources-2.6.7-r4.ebuild:
  Added a patch for the IPTables RDoS vulnerability; bug #55694.

  30 Jun 2004; <plasmaroo@gentoo.org> mm-sources-2.6.7_rc3-r2.ebuild,
  +files/mm-sources.IPTables-RDoS.patch:
  Added a patch for the IPTables RDoS vulnerability; bug #55694.

*mm-sources-2.6.7-r4 (29 Jun 2004)

  29 Jun 2004; Brandon Low <lostlogic@gentoo.org> +mm-sources-2.6.7-r4.ebuild:
  Bump

*mm-sources-2.6.7-r2 (24 Jun 2004)

  24 Jun 2004; Brandon Low <lostlogic@gentoo.org> +mm-sources-2.6.7-r2.ebuild:
  Bump

*mm-sources-2.6.7-r1 (21 Jun 2004)

  21 Jun 2004; Konstantin Arkhipov <voxus@gentoo.org>
  +mm-sources-2.6.7-r1.ebuild:
  Version bump.

*mm-sources-2.6.7_rc3-r2 (14 Jun 2004)

  14 Jun 2004; Brandon Low <lostlogic@gentoo.org>
  +mm-sources-2.6.7_rc3-r2.ebuild:
  Bump

*mm-sources-2.6.7_rc3-r1 (09 Jun 2004)

  09 Jun 2004; Brandon Low <lostlogic@gentoo.org>
  +mm-sources-2.6.7_rc3-r1.ebuild:
  bump

*mm-sources-2.6.7_rc2-r2 (03 Jun 2004)

  03 Jun 2004; Brandon Low <lostlogic@gentoo.org>
  -mm-sources-2.6.6_rc1-r1.ebuild, -mm-sources-2.6.6_rc2-r1.ebuild,
  -mm-sources-2.6.6_rc3-r1.ebuild, +mm-sources-2.6.7_rc2-r2.ebuild:
  Cleanup and bump

  31 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  mm-sources-2.6.6-r1.ebuild, mm-sources-2.6.6-r2.ebuild,
  mm-sources-2.6.6-r4.ebuild, mm-sources-2.6.6-r5.ebuild,
  mm-sources-2.6.6_rc1-r1.ebuild, mm-sources-2.6.6_rc2-r1.ebuild,
  mm-sources-2.6.6_rc3-r1.ebuild, mm-sources-2.6.7_rc1-r1.ebuild:
  Masked mm-sources-2.6.7_rc1-r1.ebuild testing for ppc

  31 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  mm-sources-2.6.6-r1.ebuild, mm-sources-2.6.6-r2.ebuild,
  mm-sources-2.6.6-r4.ebuild, mm-sources-2.6.6-r5.ebuild,