@@ -1,2 +1,0 @@
-MD5 5218790bc3db41e77a7422969639a9ad linux-2.6.6.tar.bz2 34896138
-MD5 3ec9a0b9d92f98773ad2c0ccfd9068ac 2.6.6-mm1.bz2 839421
