@@ -1,2 +1,0 @@
-MD5 5218790bc3db41e77a7422969639a9ad linux-2.6.6.tar.bz2 34896138
-MD5 0daa9ddce76dbb1de07b68992ca2e34c 2.6.6-mm2.bz2 1826451
