@@ -1,2 +1,0 @@
-MD5 5218790bc3db41e77a7422969639a9ad linux-2.6.6.tar.bz2 34896138
-MD5 2736f13595a4d2268975ca5f90a045a4 2.6.6-mm4.bz2 2304977
