@@ -1,2 +1,0 @@
-MD5 5218790bc3db41e77a7422969639a9ad linux-2.6.6.tar.bz2 34896138
-MD5 2483a20df50007ed04d4a53947d1c439 2.6.6-mm5.bz2 2492901
