@@ -1,0 +1,2 @@
+MD5 a74671ea68b0e3c609e8785ed8497c14 linux-2.6.7.tar.bz2 35092228
+MD5 bc1f51f7ec8416ea7a48fc4817be5918 2.6.7-mm6.bz2 3197220
